# infer-connectivity

./: .gitignore  README.md  pyproject.toml
scripts/: fit_glm.py  nemos_fitting.py  network_cli.py  plotRaster.py  post_process.py  post_process_sub_pop.py  run_jobs.py  simulation_cli.py
scripts/hpc_fits/: aggregate_to_population_model.py  create_configs.py  extract_output.py  fit_glm.py  fit_glm_ei_cv.py  fit_no_cv.py  run_jobs.py
src/infer_connectivity/: CreateNetwork.py  Simulatenew2.py  __init__.py  ei_glm.py  io.py  regularizer.py  roc_utils.py  utils.py  visualizations.py
